# widget2code-bench

./: .gitignore  README.md  inference.sh  pyproject.toml
prompts/html/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
prompts/html-no-size/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
prompts/html-no-size-aspect-ratio(minimal)/: 1-minimal.md
prompts/html-no-size-size(minimal)/: 1-minimal.md
prompts/html-no-size-size-and-aspect-ratio(minimal)/: 1-minimal.md
prompts/react/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
prompts/react-no-size/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
prompts/react-tailwind/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
prompts/react-tailwind-no-size/: 1-minimal.md  1-minimal.py  2-standard.md  2-standard.py  3-detailed.md  3-detailed.py
renderer/: clean.js  render-html-batch.js  render-html.js  render-jsx-batch.js  render-jsx.js
scripts/: backfill_file_type.py  backfill_meta.py  batch_infer.py  check_all_results.py  check_results.py  check_results_v2.py  requirements.txt  rerun_missing.py
src/widget2code_bench/: __init__.py  analysis.py  eval.py  main.py
src/widget_eval/: __init__.py  analysis.py  eval.py  main.py
src/widget_quality/: __init__.py  cli.py  composite.py  evaluate.py  geometry.py  layout.py  legibility.py  perceptual.py  style.py  utils.py
viewer/: next.config.js  package-lock.json  package.json
viewer/components/: CheckRunModal.jsx  PreviewCard.jsx  RunPicker.jsx
viewer/lib/: renderManager.js  serverPaths.js
viewer/pages/: _app.jsx  index.jsx  playground.jsx
viewer/pages/api/: batch-render-run.js  batch-render.js  check-pngs.js  check-run-pngs.js  check-run.js  download-all.js  file.js  images.js  render-status.js  render.js  results.js  runs.js  stop-render.js  thumbnail.js
viewer/pages/api/playground/: batch-render.js  file.js  list.js  render-one.js  reset.js  save-text.js  upload.js
viewer/renderer/: index.js
viewer/styles/: globals.css
