[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "widget2code-bench"
version = "0.2.0"
description = "Benchmark evaluation for widget code generation — 12 quality metrics across layout, legibility, perceptual, style, and geometry."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Houston Zhang"},
]
keywords = ["widget", "evaluation", "benchmark", "ui-generation", "widget2code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "numpy>=1.22",
    "opencv-python>=4.6",
    "Pillow>=9.0",
    "scikit-image>=0.19",
    "scipy>=1.8",
    "scikit-learn>=1.0",
    "easyocr>=1.6",
    "torch>=1.12",
    "torchvision>=0.13",
    "lpips>=0.1.4",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[project.scripts]
widget2code-bench = "widget2code_bench.main:main"

[project.urls]
Homepage = "https://github.com/Djanghao/widget2code-eval"

[tool.setuptools.packages.find]
where = ["src"]
